@startuml

class Ingredient {
  - ingredientId: Long
  - nom: String
  - type: TypeIngredient

  + Ingredient()
  + Ingredient(ingredientId: Long, nom: String, type: TypeIngredient)
  + getIngredientId(): Long
  + setIngredientId(ingredientId: Long): void
  + getNom(): String
  + setNom(nom: String): void
  + getType(): TypeIngredient
  + setType(type: TypeIngredient): void
}

enum TypeIngredient {
  Legume, Fruit, Viande, Boisson, Céréales, Laitier, Poisson, Oeuf, Gras, Sucré
}

class ListeCourse {
  - id: Long
  - utilisateurId: Long
  - ingredients: String
  - ingredientsList: List<String>

  + ListeCourse()
  + ListeCourse(utilisateurId: Long, ingredients: String)
  + getId(): Long
  + setId(id: Long): void
  + getUtilisateurId(): Long
  + setUtilisateurId(utilisateurId: Long): void
  + getIngredients(): String
  + setIngredients(ingredients: String): void
  + getIngredientsList(): List<String>
  + setIngredientsList(ingredientsList: List<String>): void
}

class Magasin {
  - id: Long
  - nom: String
  - typeMagasin: String
  - urlMagasin: String
  - typeAliment: String

  + Magasin()
  + Magasin(nom: String, typeMagasin: String, urlMagasin: String, typeAliment: String)
  + getId(): Long
  + setId(id: Long): void
  + getNom(): String
  + setNom(nom: String): void
  + getTypeMagasin(): String
  + setTypeMagasin(typeMagasin: String): void
  + getUrlMagasin(): String
  + setUrlMagasin(urlMagasin: String): void
  + getTypeAliment(): String
  + setTypeAliment(typeAliment: String): void
}

class Recette {
  - recetteId: Long
  - nom: String
  - note: double
  - notes: List<Double>
  - ingredients: List<Ingredient>
  - photoPath: String
  - etapesPreparation: List<String>

  + Recette()
  + getRecetteId(): Long
  + setRecetteId(recetteId: Long): void
  + getNom(): String
  + setNom(nom: String): void
  + getNote(): double
  + setNote(note: double): void
  + getNotes(): List<Double>
  + setNotes(notes: List<Double>): void
  + getIngredients(): List<Ingredient>
  + setIngredients(ingredients: List<Ingredient>): void
  + getPhotoPath(): String
  + setPhotoPath(photoPath: String): void
  + getEtapesPreparation(): List<String>
  + setEtapesPreparation(etapesPreparation: List<String>): void
}

Ingredient -- ListeCourse: a
Magasin -- ListeCourse: b
Recette -- Ingredient: c
Recette -- ListeCourse: d

@enduml
